--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -1,8 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_6
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_6
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_5
 ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_9
 ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_10
@@ -10,16 +9,15 @@ ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_12
 ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_13
 ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_15
 ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_18
-ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_19
+ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_2
 ADC1.ContinuousConvMode=ENABLE
 ADC1.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
 ADC1.DMAContinuousRequests=ENABLE
 ADC1.EOCSelection=ADC_EOC_SEQ_CONV
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,MonitoredBy-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,EOCSelection,ConversionDataManagement,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,MonitoredBy-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,MonitoredBy-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,MonitoredBy-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,MonitoredBy-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,MonitoredBy-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,OffsetNumber-6\#ChannelRegularConversion,MonitoredBy-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,OffsetNumber-7\#ChannelRegularConversion,MonitoredBy-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,OffsetNumber-8\#ChannelRegularConversion,MonitoredBy-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,OffsetNumber-9\#ChannelRegularConversion,MonitoredBy-9\#ChannelRegularConversion,NbrOfConversion,master,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,OffsetNumber-10\#ChannelRegularConversion,MonitoredBy-10\#ChannelRegularConversion,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,OffsetNumber-11\#ChannelRegularConversion,MonitoredBy-11\#ChannelRegularConversion
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,MonitoredBy-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,EOCSelection,ConversionDataManagement,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,MonitoredBy-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,MonitoredBy-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,MonitoredBy-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,MonitoredBy-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,MonitoredBy-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,OffsetNumber-6\#ChannelRegularConversion,MonitoredBy-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,OffsetNumber-7\#ChannelRegularConversion,MonitoredBy-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,OffsetNumber-8\#ChannelRegularConversion,MonitoredBy-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,OffsetNumber-9\#ChannelRegularConversion,MonitoredBy-9\#ChannelRegularConversion,NbrOfConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,OffsetNumber-10\#ChannelRegularConversion,MonitoredBy-10\#ChannelRegularConversion,master
 ADC1.MonitoredBy-0\#ChannelRegularConversion=__NULL
 ADC1.MonitoredBy-1\#ChannelRegularConversion=__NULL
 ADC1.MonitoredBy-10\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-11\#ChannelRegularConversion=__NULL
 ADC1.MonitoredBy-2\#ChannelRegularConversion=__NULL
 ADC1.MonitoredBy-3\#ChannelRegularConversion=__NULL
 ADC1.MonitoredBy-4\#ChannelRegularConversion=__NULL
@@ -28,12 +26,11 @@ ADC1.MonitoredBy-6\#ChannelRegularConversion=__NULL
 ADC1.MonitoredBy-7\#ChannelRegularConversion=__NULL
 ADC1.MonitoredBy-8\#ChannelRegularConversion=__NULL
 ADC1.MonitoredBy-9\#ChannelRegularConversion=__NULL
-ADC1.NbrOfConversion=12
+ADC1.NbrOfConversion=11
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-10\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-11\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-3\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-4\#ChannelRegularConversion=ADC_OFFSET_NONE
@@ -45,7 +42,6 @@ ADC1.OffsetNumber-9\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.Rank-1\#ChannelRegularConversion=2
 ADC1.Rank-10\#ChannelRegularConversion=11
-ADC1.Rank-11\#ChannelRegularConversion=12
 ADC1.Rank-2\#ChannelRegularConversion=3
 ADC1.Rank-3\#ChannelRegularConversion=4
 ADC1.Rank-4\#ChannelRegularConversion=5
@@ -57,7 +53,6 @@ ADC1.Rank-9\#ChannelRegularConversion=10
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
@@ -295,10 +290,17 @@ PA1.GPIO_Label=ETH_RMII_REF_CLK
 PA1.Locked=true
 PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=LPUART1_RX_R
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=LPUART1_RX
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=IMU_INT2
 PA11.Locked=true
+PA11.Signal=GPXTI11
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=SPI2_SCK_R
 PA12.Locked=true
 PA12.Mode=Full_Duplex_Master
 PA12.Signal=SPI2_SCK
@@ -326,16 +328,24 @@ PA4.GPIO_Label=ADC12_INP18
 PA4.Locked=true
 PA4.Signal=ADCx_INP18
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=ADC12_INP19
+PA5.GPIO_Label=ETH_RMII_TX_EN
 PA5.Locked=true
-PA5.Signal=ADCx_INP19
+PA5.Mode=RMII
+PA5.Signal=ETH_TX_EN
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=ADC12_INP3
 PA6.Locked=true
 PA6.Signal=ADCx_INP3
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=ETH_RMII_TX_EN
 PA7.Mode=RMII
 PA7.Signal=ETH_CRS_DV
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=IMU_INT1
 PA8.Locked=true
+PA8.Signal=GPXTI8
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=LPUART1_TX_R
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=LPUART1_TX
@@ -418,10 +428,7 @@ PC5.GPIO_Label=ETH_RMI_RXD1
 PC5.Locked=true
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
-PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=LTC4376_FAULT
 PC6.Locked=true
-PC6.Signal=GPIO_Input
 PC7.Locked=true
 PC8.Locked=true
 PC9.Locked=true
@@ -458,21 +465,12 @@ PD15.GPIO_Label=EF_PUMP2_ER
 PD15.Locked=true
 PD15.Signal=GPIO_Input
 PD2.GPIOParameters=GPIO_Label
-PD2.GPIO_Label=EF_BREAK_EN
+PD2.GPIO_Label=RTDS_GPIO
 PD2.Locked=true
-PD2.Signal=GPIO_Output
-PD3.GPIOParameters=GPIO_Label
-PD3.GPIO_Label=EF_BREAK_ER
+PD2.Signal=GPIO_Input
 PD3.Locked=true
-PD3.Signal=GPIO_Input
-PD4.GPIOParameters=GPIO_Label
-PD4.GPIO_Label=EF_SHUTDOWN_EN
 PD4.Locked=true
-PD4.Signal=GPIO_Output
-PD5.GPIOParameters=GPIO_Label
-PD5.GPIO_Label=EF_SHUTDOWN_ER
 PD5.Locked=true
-PD5.Signal=GPIO_Input
 PD6.GPIOParameters=GPIO_Label
 PD6.GPIO_Label=EF_LV_EN
 PD6.Locked=true
@@ -482,11 +480,11 @@ PD7.GPIO_Label=EF_LV_ER
 PD7.Locked=true
 PD7.Signal=GPIO_Input
 PD8.GPIOParameters=GPIO_Label
-PD8.GPIO_Label=EF_RADFAN_EN
+PD8.GPIO_Label=EF_BREAK_EN
 PD8.Locked=true
 PD8.Signal=GPIO_Output
 PD9.GPIOParameters=GPIO_Label
-PD9.GPIO_Label=EF_RADFAN_ER
+PD9.GPIO_Label=EF_BREAK_ER
 PD9.Locked=true
 PD9.Signal=GPIO_Input
 PE0.GPIOParameters=GPIO_Label
@@ -502,54 +500,25 @@ PE11.GPIOParameters=GPIO_Label
 PE11.GPIO_Label=PHY_GPIO
 PE11.Locked=true
 PE11.Signal=GPIO_Input
-PE12.GPIOParameters=GPIO_Label
-PE12.GPIO_Label=EF_SPARE_EN
 PE12.Locked=true
-PE12.Signal=GPIO_Output
-PE13.GPIOParameters=GPIO_Label
-PE13.GPIO_Label=EF_SPARE_ER
 PE13.Locked=true
-PE13.Signal=GPIO_Input
-PE14.GPIOParameters=GPIO_Label
-PE14.GPIO_Label=RTDS_GPIO
 PE14.Locked=true
-PE14.Signal=GPIO_Output
 PE15.Locked=true
-PE2.GPIOParameters=GPIO_Label
-PE2.GPIO_Label=CKPT_GPIO
 PE2.Locked=true
-PE2.Signal=GPIO_Input
-PE3.GPIOParameters=GPIO_Label
-PE3.GPIO_Label=INERTIA_SW_GPIO
 PE3.Locked=true
-PE3.Signal=GPIO_Input
-PE4.GPIOParameters=GPIO_Label
-PE4.GPIO_Label=TSMS_GPIO
 PE4.Locked=true
-PE4.Signal=GPIO_Input
-PE5.GPIOParameters=GPIO_Label
-PE5.GPIO_Label=IMU_INT1
 PE5.Locked=true
-PE5.Signal=GPXTI5
-PE6.GPIOParameters=GPIO_Label
-PE6.GPIO_Label=IMU_INT2
 PE6.Locked=true
-PE6.Signal=GPXTI6
-PE7.GPIOParameters=GPIO_Label
-PE7.GPIO_Label=PHY_IRQ
 PE7.Locked=true
-PE7.Signal=GPXTI7
-PE8.GPIOParameters=GPIO_Label
-PE8.GPIO_Label=PHY_RX_ER
 PE8.Locked=true
-PE8.Signal=GPIO_Input
-PE9.GPIOParameters=GPIO_Label
-PE9.GPIO_Label=PHY_RX_DV
 PE9.Locked=true
-PE9.Signal=GPIO_Input
+PF0.GPIOParameters=GPIO_Label
+PF0.GPIO_Label=I2C2_SDA_R
 PF0.Locked=true
 PF0.Mode=I2C
 PF0.Signal=I2C2_SDA
+PF1.GPIOParameters=GPIO_Label
+PF1.GPIO_Label=I2C2_SCL_R
 PF1.Locked=true
 PF1.Mode=I2C
 PF1.Signal=I2C2_SCL
@@ -606,15 +575,19 @@ PF9.GPIO_Label=BSPD_GPIO
 PF9.Locked=true
 PF9.Signal=GPIO_Input
 PG0.Locked=true
+PG1.GPIOParameters=GPIO_Label
+PG1.GPIO_Label=SPI2_MOSI_R
 PG1.Locked=true
 PG1.Mode=Full_Duplex_Master
 PG1.Signal=SPI2_MOSI
+PG10.GPIOParameters=GPIO_Label
+PG10.GPIO_Label=EF_SPARE_EN
 PG10.Locked=true
+PG10.Signal=GPIO_Output
 PG11.GPIOParameters=GPIO_Label
-PG11.GPIO_Label=ETH_RMII_TX_EN
+PG11.GPIO_Label=EF_SPARE_ER
 PG11.Locked=true
-PG11.Mode=RMII
-PG11.Signal=ETH_TX_EN
+PG11.Signal=GPIO_Input
 PG12.Locked=true
 PG13.Locked=true
 PG14.GPIOParameters=GPIO_Label
@@ -626,14 +599,35 @@ PG15.GPIO_Label=FAULT_MCU
 PG15.Locked=true
 PG15.PinState=GPIO_PIN_SET
 PG15.Signal=GPIO_Output
+PG2.GPIOParameters=GPIO_Label
+PG2.GPIO_Label=CKPT_GPIO
 PG2.Locked=true
+PG2.Signal=GPIO_Input
+PG3.GPIOParameters=GPIO_Label
+PG3.GPIO_Label=INERTIA_SW_GPIO
 PG3.Locked=true
+PG3.Signal=GPIO_Input
+PG4.GPIOParameters=GPIO_Label
+PG4.GPIO_Label=EF_RADFAN_EN
 PG4.Locked=true
+PG4.Signal=GPIO_Output
+PG5.GPIOParameters=GPIO_Label
+PG5.GPIO_Label=EF_RADFAN_ER
 PG5.Locked=true
+PG5.Signal=GPIO_Input
+PG6.GPIOParameters=GPIO_Label
+PG6.GPIO_Label=EF_SHUTDOWN_EN
 PG6.Locked=true
+PG6.Signal=GPIO_Output
+PG7.GPIOParameters=GPIO_Label
+PG7.GPIO_Label=EF_SHUTDOWN_ER
 PG7.Locked=true
+PG7.Signal=GPIO_Input
 PG8.Locked=true
+PG9.GPIOParameters=GPIO_Label
+PG9.GPIO_Label=TSMS_GPIO
 PG9.Locked=true
+PG9.Signal=GPIO_Input
 PH0-OSC_IN(PH0).GPIOParameters=GPIO_Label
 PH0-OSC_IN(PH0).GPIO_Label=PH0-OSC_IN
 PH0-OSC_IN(PH0).Mode=HSE-External-Oscillator
@@ -780,9 +774,6 @@ SH.ADCx_INP15.ConfNb=2
 SH.ADCx_INP18.0=ADC2_INP18
 SH.ADCx_INP18.1=ADC1_INP18,IN18-Single-Ended
 SH.ADCx_INP18.ConfNb=2
-SH.ADCx_INP19.0=ADC1_INP19,IN19-Single-Ended
-SH.ADCx_INP19.1=ADC2_INP19,IN19-Single-Ended
-SH.ADCx_INP19.ConfNb=2
 SH.ADCx_INP3.0=ADC2_INP3
 SH.ADCx_INP3.1=ADC1_INP3,IN3-Single-Ended
 SH.ADCx_INP3.ConfNb=2
@@ -792,12 +783,10 @@ SH.ADCx_INP5.ConfNb=2
 SH.ADCx_INP9.0=ADC1_INP9,IN9-Single-Ended
 SH.ADCx_INP9.1=ADC2_INP9,IN9-Single-Ended
 SH.ADCx_INP9.ConfNb=2
-SH.GPXTI5.0=GPIO_EXTI5
-SH.GPXTI5.ConfNb=1
-SH.GPXTI6.0=GPIO_EXTI6
-SH.GPXTI6.ConfNb=1
-SH.GPXTI7.0=GPIO_EXTI7
-SH.GPXTI7.ConfNb=1
+SH.GPXTI11.0=GPIO_EXTI11
+SH.GPXTI11.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
 SPI2.CalculateBaudRate=21.333332 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
