--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -1,83 +1,19 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_6
-ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_9
-ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_10
-ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_12
-ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_13
-ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_15
-ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_18
-ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.ContinuousConvMode=ENABLE
-ADC1.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
-ADC1.DMAContinuousRequests=ENABLE
-ADC1.EOCSelection=ADC_EOC_SEQ_CONV
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,MonitoredBy-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,EOCSelection,ConversionDataManagement,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,MonitoredBy-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,MonitoredBy-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,MonitoredBy-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,MonitoredBy-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,MonitoredBy-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,OffsetNumber-6\#ChannelRegularConversion,MonitoredBy-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,OffsetNumber-7\#ChannelRegularConversion,MonitoredBy-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,OffsetNumber-8\#ChannelRegularConversion,MonitoredBy-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,OffsetNumber-9\#ChannelRegularConversion,MonitoredBy-9\#ChannelRegularConversion,NbrOfConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,OffsetNumber-10\#ChannelRegularConversion,MonitoredBy-10\#ChannelRegularConversion,master
-ADC1.MonitoredBy-0\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-1\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-10\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-2\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-3\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-4\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-5\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-6\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-7\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-8\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-9\#ChannelRegularConversion=__NULL
-ADC1.NbrOfConversion=11
+ADC1.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.IPParameters=Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,OffsetNumber-11\#ChannelRegularConversion,MonitoredBy-11\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.MonitoredBy-11\#ChannelRegularConversion=__NULL
 ADC1.NbrOfConversionFlag=1
-ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-10\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-3\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-4\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-5\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-6\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-7\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-8\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-9\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.Rank-1\#ChannelRegularConversion=2
-ADC1.Rank-10\#ChannelRegularConversion=11
-ADC1.Rank-2\#ChannelRegularConversion=3
-ADC1.Rank-3\#ChannelRegularConversion=4
-ADC1.Rank-4\#ChannelRegularConversion=5
-ADC1.Rank-5\#ChannelRegularConversion=6
-ADC1.Rank-6\#ChannelRegularConversion=7
-ADC1.Rank-7\#ChannelRegularConversion=8
-ADC1.Rank-8\#ChannelRegularConversion=9
-ADC1.Rank-9\#ChannelRegularConversion=10
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-9\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.OffsetNumber-11\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-11\#ChannelRegularConversion=1
+ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_6
-ADC2.ContinuousConvMode=ENABLE
-ADC2.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
-ADC2.DMAContinuousRequests=ENABLE
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,MonitoredBy-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,ConversionDataManagement,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,MonitoredBy-1\#ChannelRegularConversion,NbrOfConversion
-ADC2.MonitoredBy-0\#ChannelRegularConversion=__NULL
-ADC2.MonitoredBy-1\#ChannelRegularConversion=__NULL
-ADC2.NbrOfConversion=2
+ADC2.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC2.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,MonitoredBy-2\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.MonitoredBy-2\#ChannelRegularConversion=__NULL
 ADC2.NbrOfConversionFlag=1
-ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC2.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.Rank-1\#ChannelRegularConversion=2
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC2.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.Rank-2\#ChannelRegularConversion=1
+ADC2.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 BOOTPATH.BootPathName=LEGACY
 BOOTPATH.IPParameters=BootPathName
 BOOTPATH.UserSelectedBootPath=LEGACY
@@ -85,8 +21,6 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
-ETH.IPParameters=MediaInterface
-ETH.MediaInterface=HAL_ETH_RMII_MODE
 FDCAN2.CalculateBaudRateNominal=888888
 FDCAN2.CalculateTimeBitNominal=1125
 FDCAN2.CalculateTimeQuantumNominal=375.0
@@ -100,8 +34,6 @@ GPDMA1.IPParameters=CIRCULARMODE_GPDMACH5,IPHANDLE_GPDMACH5-SIMPLEREQUEST_GPDMAC
 GPDMA1.REQUEST_GPDMACH5=GPDMA1_REQUEST_ADC1
 GPDMA1.SRCDATAWIDTH_GPDMACH5=DMA_SRC_DATAWIDTH_HALFWORD
 GPIO.groupedBy=Group By Peripherals
-I2C2.IPParameters=Timing
-I2C2.Timing=0x00707CBB
 KeepUserPlacement=false
 MMTAppRegionsCount=0
 MMTConfigApplied=false
@@ -110,24 +42,20 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32H5
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=LPUART1
-Mcu.IP11=MEMORYMAP
-Mcu.IP12=NETXDUO
-Mcu.IP13=NVIC
-Mcu.IP14=PWR
-Mcu.IP15=RCC
-Mcu.IP16=SPI2
-Mcu.IP17=SYS
-Mcu.IP18=THREADX
+Mcu.IP10=NVIC
+Mcu.IP11=PWR
+Mcu.IP12=RCC
+Mcu.IP13=SYS
+Mcu.IP14=THREADX
 Mcu.IP2=BOOTPATH
 Mcu.IP3=CORTEX_M33_NS
-Mcu.IP4=ETH
-Mcu.IP5=FDCAN2
-Mcu.IP6=GPDMA1
-Mcu.IP7=I2C2
-Mcu.IP8=ICACHE
-Mcu.IP9=IWDG
-Mcu.IPNb=19
+Mcu.IP4=FDCAN2
+Mcu.IP5=GPDMA1
+Mcu.IP6=ICACHE
+Mcu.IP7=IWDG
+Mcu.IP8=MEMORYMAP
+Mcu.IP9=NETXDUO
+Mcu.IPNb=15
 Mcu.Name=STM32H563ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -151,15 +79,13 @@ Mcu.Pin113=VP_GPDMA1_VS_GPDMACH5
 Mcu.Pin114=VP_ICACHE_VS_ICACHE
 Mcu.Pin115=VP_IWDG_VS_IWDG
 Mcu.Pin116=VP_NETXDUO_VS_NXOoCore
-Mcu.Pin117=VP_NETXDUO_VS_NetworkOoInterface
-Mcu.Pin118=VP_NETXDUO_VS_EthernetOoPhyOoInterface
-Mcu.Pin119=VP_PWR_VS_SECSignals
+Mcu.Pin117=VP_PWR_VS_SECSignals
+Mcu.Pin118=VP_PWR_VS_LPOM
+Mcu.Pin119=VP_SYS_VS_tim1
 Mcu.Pin12=PF4
-Mcu.Pin120=VP_PWR_VS_LPOM
-Mcu.Pin121=VP_SYS_VS_tim1
-Mcu.Pin122=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-Mcu.Pin123=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin124=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin120=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.Pin121=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin122=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin13=PF5
 Mcu.Pin14=PF6
 Mcu.Pin15=PF7
@@ -255,7 +181,7 @@ Mcu.Pin96=PD7
 Mcu.Pin97=PG9
 Mcu.Pin98=PG10
 Mcu.Pin99=PG11
-Mcu.PinsNb=125
+Mcu.PinsNb=123
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563ZITx
@@ -282,27 +208,20 @@ NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
-PA0.GPIO_Label=ADC12_INP0
+PA0.GPIO_Label=ADC12_INP0_1
 PA0.Locked=true
 PA0.Signal=ADCx_INP0
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=ETH_RMII_REF_CLK
 PA1.Locked=true
-PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=LPUART1_RX_R
 PA10.Locked=true
-PA10.Mode=Asynchronous
 PA10.Signal=LPUART1_RX
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=IMU_INT2
 PA11.Locked=true
 PA11.Signal=GPXTI11
-PA12.GPIOParameters=GPIO_Label
-PA12.GPIO_Label=SPI2_SCK_R
 PA12.Locked=true
-PA12.Mode=Full_Duplex_Master
 PA12.Signal=SPI2_SCK
 PA13(JTMS/SWDIO).GPIOParameters=GPIO_Label
 PA13(JTMS/SWDIO).GPIO_Label=JTMS
@@ -317,10 +236,9 @@ PA15(JTDI).GPIO_Label=JTDI
 PA15(JTDI).Locked=true
 PA15(JTDI).Signal=DEBUG_JTDI
 PA2.Locked=true
-PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
 PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=ADC12_INP15
+PA3.GPIO_Label=ADC12_INP15_2
 PA3.Locked=true
 PA3.Signal=ADCx_INP15
 PA4.GPIOParameters=GPIO_Label
@@ -330,24 +248,20 @@ PA4.Signal=ADCx_INP18
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=ETH_RMII_TX_EN
 PA5.Locked=true
-PA5.Mode=RMII
 PA5.Signal=ETH_TX_EN
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=ADC12_INP3
 PA6.Locked=true
 PA6.Signal=ADCx_INP3
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=ETH_RMII_TX_EN
-PA7.Mode=RMII
+PA7.GPIO_Label=ETH_RMII_CRS_DV
+PA7.Locked=true
 PA7.Signal=ETH_CRS_DV
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=IMU_INT1
 PA8.Locked=true
 PA8.Signal=GPXTI8
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=LPUART1_TX_R
 PA9.Locked=true
-PA9.Mode=Asynchronous
 PA9.Signal=LPUART1_TX
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=ADC12_INP9
@@ -361,16 +275,16 @@ PB10.Locked=true
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=ETH_RMII_TXD0
 PB12.Locked=true
-PB12.Mode=RMII
 PB12.Signal=ETH_TXD0
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=ETH_MII_RX_ER
 PB13.Locked=true
+PB13.Signal=GPIO_Input
 PB14.Locked=true
-PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
 PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=ETH_RMII_TXD1
 PB15.Locked=true
-PB15.Mode=RMII
 PB15.Signal=ETH_TXD1
 PB2.Locked=true
 PB3(JTDO/TRACESWO).GPIOParameters=GPIO_Label
@@ -385,10 +299,7 @@ PB6.Locked=true
 PB6.Mode=FDCAN_Activate
 PB6.Signal=FDCAN2_TX
 PB7.Locked=true
-PB7.Signal=I2C1_SDA
 PB8.Locked=true
-PB9.GPIOParameters=GPIO_Label
-PB9.GPIO_Label=SPI2_NSS
 PB9.Locked=true
 PB9.Signal=SPI2_NSS
 PC0.GPIOParameters=GPIO_Label
@@ -396,20 +307,13 @@ PC0.GPIO_Label=ADC12_INP10
 PC0.Locked=true
 PC0.Signal=ADCx_INP10
 PC1.Locked=true
-PC1.Mode=RMII
 PC1.Signal=ETH_MDC
 PC10.Locked=true
 PC11.Locked=true
 PC12.Locked=true
 PC13.Locked=true
-PC14-OSC32_IN(OSC32_IN).GPIOParameters=GPIO_Label
-PC14-OSC32_IN(OSC32_IN).GPIO_Label=PC14-OSC32_IN
-PC14-OSC32_IN(OSC32_IN).Mode=LSE-External-Clock-Source
-PC14-OSC32_IN(OSC32_IN).Signal=RCC_OSC32_IN
-PC15-OSC32_OUT(OSC32_OUT).GPIOParameters=GPIO_Label
-PC15-OSC32_OUT(OSC32_OUT).GPIO_Label=PC15-OSC32_OUT
+PC14-OSC32_IN(OSC32_IN).Locked=true
 PC15-OSC32_OUT(OSC32_OUT).Locked=true
-PC15-OSC32_OUT(OSC32_OUT).Signal=RCC_OSC32_OUT
 PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=ADC12_INP12
 PC2.Locked=true
@@ -421,12 +325,10 @@ PC3.Signal=ADCx_INP13
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=ETH_RMII_RXD0
 PC4.Locked=true
-PC4.Mode=RMII
 PC4.Signal=ETH_RXD0
 PC5.GPIOParameters=GPIO_Label
-PC5.GPIO_Label=ETH_RMI_RXD1
+PC5.GPIO_Label=ETH_RMII_RXD1
 PC5.Locked=true
-PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
 PC6.Locked=true
 PC7.Locked=true
@@ -467,7 +369,7 @@ PD15.Signal=GPIO_Input
 PD2.GPIOParameters=GPIO_Label
 PD2.GPIO_Label=RTDS_GPIO
 PD2.Locked=true
-PD2.Signal=GPIO_Input
+PD2.Signal=GPIO_Output
 PD3.Locked=true
 PD4.Locked=true
 PD5.Locked=true
@@ -491,10 +393,9 @@ PE0.GPIOParameters=GPIO_Label
 PE0.GPIO_Label=IMD_GPIO
 PE0.Locked=true
 PE0.Signal=GPIO_Input
-PE10.GPIOParameters=PinState,GPIO_Label
+PE10.GPIOParameters=GPIO_Label
 PE10.GPIO_Label=PHY_RESET
 PE10.Locked=true
-PE10.PinState=GPIO_PIN_SET
 PE10.Signal=GPIO_Output
 PE11.GPIOParameters=GPIO_Label
 PE11.GPIO_Label=PHY_GPIO
@@ -510,30 +411,27 @@ PE4.Locked=true
 PE5.Locked=true
 PE6.Locked=true
 PE7.Locked=true
+PE7.Signal=UART7_RX
 PE8.Locked=true
+PE8.Signal=UART7_TX
+PE9.GPIOParameters=GPIO_Label
+PE9.GPIO_Label=PHY_IRQ
 PE9.Locked=true
-PF0.GPIOParameters=GPIO_Label
-PF0.GPIO_Label=I2C2_SDA_R
+PE9.Signal=GPXTI9
 PF0.Locked=true
-PF0.Mode=I2C
 PF0.Signal=I2C2_SDA
-PF1.GPIOParameters=GPIO_Label
-PF1.GPIO_Label=I2C2_SCL_R
 PF1.Locked=true
-PF1.Mode=I2C
 PF1.Signal=I2C2_SCL
 PF10.GPIOParameters=GPIO_Label
 PF10.GPIO_Label=HV_C_GPIO
 PF10.Locked=true
 PF10.Signal=GPIO_Input
 PF11.Locked=true
-PF11.Mode=IN2-Single-Ended
 PF11.Signal=ADC1_INP2
 PF12.Locked=true
 PF12.Mode=IN6-Single-Ended
 PF12.Signal=ADC1_INP6
 PF13.Locked=true
-PF13.Mode=IN2-Single-Ended
 PF13.Signal=ADC2_INP2
 PF14.Locked=true
 PF14.Mode=IN6-Single-Ended
@@ -575,10 +473,7 @@ PF9.GPIO_Label=BSPD_GPIO
 PF9.Locked=true
 PF9.Signal=GPIO_Input
 PG0.Locked=true
-PG1.GPIOParameters=GPIO_Label
-PG1.GPIO_Label=SPI2_MOSI_R
 PG1.Locked=true
-PG1.Mode=Full_Duplex_Master
 PG1.Signal=SPI2_MOSI
 PG10.GPIOParameters=GPIO_Label
 PG10.GPIO_Label=EF_SPARE_EN
@@ -594,10 +489,9 @@ PG14.GPIOParameters=GPIO_Label
 PG14.GPIO_Label=WATCHDOG
 PG14.Locked=true
 PG14.Signal=GPIO_Output
-PG15.GPIOParameters=PinState,GPIO_Label
+PG15.GPIOParameters=GPIO_Label
 PG15.GPIO_Label=FAULT_MCU
 PG15.Locked=true
-PG15.PinState=GPIO_PIN_SET
 PG15.Signal=GPIO_Output
 PG2.GPIOParameters=GPIO_Label
 PG2.GPIO_Label=CKPT_GPIO
@@ -628,15 +522,8 @@ PG9.GPIOParameters=GPIO_Label
 PG9.GPIO_Label=TSMS_GPIO
 PG9.Locked=true
 PG9.Signal=GPIO_Input
-PH0-OSC_IN(PH0).GPIOParameters=GPIO_Label
-PH0-OSC_IN(PH0).GPIO_Label=PH0-OSC_IN
-PH0-OSC_IN(PH0).Mode=HSE-External-Oscillator
-PH0-OSC_IN(PH0).Signal=RCC_OSC_IN
-PH1-OSC_OUT(PH1).GPIOParameters=GPIO_Label
-PH1-OSC_OUT(PH1).GPIO_Label=PH1-OSC_OUT
+PH0-OSC_IN(PH0).Locked=true
 PH1-OSC_OUT(PH1).Locked=true
-PH1-OSC_OUT(PH1).Mode=HSE-External-Oscillator
-PH1-OSC_OUT(PH1).Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -669,7 +556,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_ETH_Init-ETH-false-HAL-true,9-MX_IWDG_Init-IWDG-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_SPI2_Init-SPI2-false-HAL-true,12-MX_FDCAN2_Init-FDCAN2-false-HAL-true,13-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPDMA1_Init-GPDMA1-false-HAL-true,3-MX_ICACHE_Init-ICACHE-false-HAL-true,4-MX_NetXDuo_Init-NETXDUO-false-HAL-false,5-MX_IWDG_Init-IWDG-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
@@ -756,8 +643,8 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=128000000
 RCC.VCOPLL2OutputFreq_Value=516000000
 RCC.VCOPLL3OutputFreq_Value=516000000
-SH.ADCx_INP0.0=ADC2_INP0,IN0-Single-Ended
-SH.ADCx_INP0.1=ADC1_INP0,IN0-Single-Ended
+SH.ADCx_INP0.0=ADC1_INP0,IN0-Single-Ended
+SH.ADCx_INP0.1=ADC2_INP0,IN0-Single-Ended
 SH.ADCx_INP0.ConfNb=2
 SH.ADCx_INP10.0=ADC2_INP10
 SH.ADCx_INP10.1=ADC1_INP10,IN10-Single-Ended
@@ -787,12 +674,8 @@ SH.GPXTI11.0=GPIO_EXTI11
 SH.GPXTI11.ConfNb=1
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
-SPI2.CalculateBaudRate=21.333332 MBits/s
-SPI2.DataSize=SPI_DATASIZE_8BIT
-SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize
-SPI2.Mode=SPI_MODE_MASTER
-SPI2.VirtualType=VM_MASTER
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION,TX_TIMER_TICKS_PER_SECOND
 THREADX.TX_APP_CREATION=1
 THREADX.TX_APP_GENERATE_INIT_CODE=false
@@ -809,12 +692,8 @@ VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
-VP_NETXDUO_VS_EthernetOoPhyOoInterface.Mode=Custom_Phy_Interface
-VP_NETXDUO_VS_EthernetOoPhyOoInterface.Signal=NETXDUO_VS_EthernetOoPhyOoInterface
 VP_NETXDUO_VS_NXOoCore.Mode=NX_Core
 VP_NETXDUO_VS_NXOoCore.Signal=NETXDUO_VS_NXOoCore
-VP_NETXDUO_VS_NetworkOoInterface.Mode=Ethernet_Interface
-VP_NETXDUO_VS_NetworkOoInterface.Signal=NETXDUO_VS_NetworkOoInterface
 VP_PWR_VS_LPOM.Mode=PowerOptimisation
 VP_PWR_VS_LPOM.Signal=PWR_VS_LPOM
 VP_PWR_VS_SECSignals.Mode=Security/Privilege
