--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -160,13 +160,15 @@ Mcu.Pin114=VP_GPDMA1_VS_GPDMACH5
 Mcu.Pin115=VP_ICACHE_VS_ICACHE
 Mcu.Pin116=VP_IWDG_VS_IWDG
 Mcu.Pin117=VP_NETXDUO_VS_NXOoCore
-Mcu.Pin118=VP_PWR_VS_SECSignals
-Mcu.Pin119=VP_PWR_VS_LPOM
+Mcu.Pin118=VP_NETXDUO_VS_NetworkOoInterface
+Mcu.Pin119=VP_NETXDUO_VS_EthernetOoPhyOoInterface
 Mcu.Pin12=PF4
-Mcu.Pin120=VP_SYS_VS_tim1
-Mcu.Pin121=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-Mcu.Pin122=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin123=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin120=VP_PWR_VS_SECSignals
+Mcu.Pin121=VP_PWR_VS_LPOM
+Mcu.Pin122=VP_SYS_VS_tim1
+Mcu.Pin123=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.Pin124=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin125=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin13=PF5
 Mcu.Pin14=PF6
 Mcu.Pin15=PF7
@@ -262,7 +264,7 @@ Mcu.Pin96=PD7
 Mcu.Pin97=PG9
 Mcu.Pin98=PG10
 Mcu.Pin99=PG11
-Mcu.PinsNb=124
+Mcu.PinsNb=126
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563ZITx
@@ -392,7 +394,10 @@ PB6.Mode=FDCAN_Activate
 PB6.Signal=FDCAN2_TX
 PB7.Locked=true
 PB8.Locked=true
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=SPI2_NSS
 PB9.Locked=true
+PB9.Mode=NSS_Signal_Hard_Output
 PB9.Signal=SPI2_NSS
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=ADC12_INP10
@@ -658,7 +663,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPDMA1_Init-GPDMA1-false-HAL-true,3-MX_GPIO_Init-GPIO-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_IWDG_Init-IWDG-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_ADC2_Init-ADC2-false-HAL-true,9-MX_FDCAN2_Init-FDCAN2-false-HAL-true,10-MX_ETH_Init-ETH-false-HAL-true,11-MX_I2C2_Init-I2C2-false-HAL-true,12-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,13-MX_SPI2_Init-SPI2-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPDMA1_Init-GPDMA1-false-HAL-true,3-MX_GPIO_Init-GPIO-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_IWDG_Init-IWDG-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_ADC2_Init-ADC2-false-HAL-true,9-MX_FDCAN2_Init-FDCAN2-false-HAL-true,10-MX_ETH_Init-ETH-false-HAL-true,11-MX_I2C2_Init-I2C2-false-HAL-true,12-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,13-MX_SPI2_Init-SPI2-false-HAL-true,14-MX_UART7_Init-UART7-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
@@ -780,8 +785,9 @@ SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
 SPI2.CalculateBaudRate=21.333332 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
 SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualNSS=VM_NSSHARD
 SPI2.VirtualType=VM_MASTER
 THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION,TX_TIMER_TICKS_PER_SECOND
 THREADX.TX_APP_CREATION=1
@@ -801,8 +807,12 @@ VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
+VP_NETXDUO_VS_EthernetOoPhyOoInterface.Mode=Custom_Phy_Interface
+VP_NETXDUO_VS_EthernetOoPhyOoInterface.Signal=NETXDUO_VS_EthernetOoPhyOoInterface
 VP_NETXDUO_VS_NXOoCore.Mode=NX_Core
 VP_NETXDUO_VS_NXOoCore.Signal=NETXDUO_VS_NXOoCore
+VP_NETXDUO_VS_NetworkOoInterface.Mode=Ethernet_Interface
+VP_NETXDUO_VS_NetworkOoInterface.Signal=NETXDUO_VS_NetworkOoInterface
 VP_PWR_VS_LPOM.Mode=PowerOptimisation
 VP_PWR_VS_LPOM.Signal=PWR_VS_LPOM
 VP_PWR_VS_SECSignals.Mode=Security/Privilege
