--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -596,9 +596,10 @@ PG14.GPIOParameters=GPIO_Label
 PG14.GPIO_Label=WATCHDOG
 PG14.Locked=true
 PG14.Signal=GPIO_Output
-PG15.GPIOParameters=GPIO_Label
+PG15.GPIOParameters=PinState,GPIO_Label
 PG15.GPIO_Label=FAULT_MCU
 PG15.Locked=true
+PG15.PinState=GPIO_PIN_SET
 PG15.Signal=GPIO_Output
 PG2.GPIOParameters=GPIO_Label
 PG2.GPIO_Label=CKPT_GPIO
@@ -784,8 +785,9 @@ SH.GPXTI8.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
 SPI2.CalculateBaudRate=21.333332 MBits/s
+SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,DataSize
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualNSS=VM_NSSHARD
 SPI2.VirtualType=VM_MASTER
